--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,6 @@
 .*.swp
 REEF_LOCAL_RUNTIME/
 target/
-/result/
+/results/
 /.idea/
 /repository/org/apache/nemo/nemo-examples-beam/0.1-SNAPSHOT/nemo-examples-beam-0.1-SNAPSHOT.jar
